# dofbot

dofbot/: CMakeLists.txt  dofbot.xml  package.xml
dofbot/config/: controllers.yaml  dofbot.rviz  kinematics.yaml  simple_moveit_controllers.yaml
dofbot/include/: arm.hpp  dof_bot.xml  visibility_control.h
dofbot/launch/: move_group_launch.py  replastic.launch.py  replastic.launch.yaml  robot_launch.py  rviz.launch.py
dofbot/meshes/: leftfinger.FCStd  leftfinger.stl  link5-nofinger.FCStd  rightfinger.FCStd  rightfinger.stl
dofbot/src/: arm.cpp  dofbot.cpp  node_test.cpp
dofbot/test/: test_hardware_components.xml  test_load_dofbot_arm.cpp
dofbot/urdf/: robot.srdf  robot.urdf
mtc/: CMakeLists.txt  package.xml
mtc/config/: controllers.yaml  dofbot.rviz  joint_limits.yaml  kinematics.yaml  simple_moveit_controllers.yaml
mtc/launch/: mtc.launch.py  pick_place.launch.py  pp.launch.py
mtc/src/: mtc_node.cpp
